yml/busybox-ns.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox2
  namespace: secret
spec:
  containers:
  - name: busybox
    image: busy
    command: 
      - sleep
      - "3600"
