yml/ingress-httpd.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: httpd-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host:
    http:
      paths:
      - path: /httpd
        backend:
          serviceName: httpd
          servicePort: 80
