yml/ingress-nginx.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mynginx-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host:
    http:
      paths:
      - path: /mynginx
        backend:
          serviceName: mynignx
          servicePort: 80
